--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,15 @@
-// Navigation Styles here
+// Navigation Styles here//
+
+
+
+nav {
+    border: 1px solid red;
+
+}
+
+a {
+    display: flex;
+    width: 100%
+    justify-content: space-between;
+    font-size: 20px;
+}
