--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,55 @@
 /* LESS needs to be processed */
+
+nav h1 {
+      color: black;
+    width: 30%;
+    
+  }
+
+  /* Fun bus title */ 
+  nav {
+      margin-left: 20%;
+    align-items: baseline;
+    align-content: center;
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    border: 1px solid red;
+
+  }
+
+
+  /* The Navigations  */
+  a {
+    font-family: Helvetica,Arial,sans-serif;
+    color: black;
+    font-size: 15px;
+    display: flex;
+    margin-left: 100px;
+    text-decoration: none;
+    position: relative;
+    
+  }
+  
+  .bus {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 80%;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    border-top-style: dashed;
+    border-color: grey;
+
+    /* border-width: 25px 10px 4px 35px; */
+   
+
+   
+    
+
+}
+
+  
+
