--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,15 +1,2 @@
 // Navigation Styles here//
-
-
-
-nav {
-    border: 1px solid red;
-
-}
-
-a {
-    display: flex;
-    width: 100%
-    justify-content: space-between;
-    font-size: 20px;
-}
+@font-color: black;
