--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,9 @@
 /* LESS needs to be processed */
 
+html {
+    background-color: #FFFFFF ;
+}
+
 nav h1 {
       color: black;
     width: 30%;
@@ -15,7 +19,6 @@ nav h1 {
     width: 60%;
     justify-content: space-between;
     font-size: 1.5rem;
-    border: 1px solid red;
 
   }
 
@@ -37,18 +40,27 @@ nav h1 {
     justify-content: center;
     width: 100%;
     height: 80%;
-    border-bottom: none;
-    border-left: none;
-    border-right: none;
+    border-bottom-style: none;
+    border-left-style: none;
+    border-right-style: none;
     border-top-style: dashed;
     border-color: grey;
+}
 
-    /* border-width: 25px 10px 4px 35px; */
-   
-
-   
+.first-content {
+    display: flex;
+    justify-content: center;
+    width: 64%;
+    margin-left: 18%;
     
+}
 
+.text-content-1 {
+    display: flex;
+}
+
+.text-content div {
+    margin: 20px;
 }
 
   
