--- a/less/footer.less
+++ b/less/footer.less
@@ -1,8 +1,14 @@
 .footer {
   width: 100%;
+  width: 50%;
+  margin: auto;
   border-top: 2px dashed silver;
   background: @sandy-beach;
-  
+
+  @media @mobile {
+    width: 100%
+  }
+
   p {
     text-align: center;
     color: @font-color;
