--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,62 +1,125 @@
+.section {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 48%;
+  padding-right:1%;
+  margin-top: 30px;
+  padding-bottom: 10px;
+  border-bottom: 2px dashed @navigation-border;
+  @media @mobile {
+    width: 85%;
+  }
+
+}
+
+.bus {
+  margin: auto;
+  width: 48%;
+  padding-right: 1%;
+  @media @mobile {
+    width: 87%;
+  }
+
+}
+
 .home {
+
+  @media @mobile {
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
-      border 1px solid red;
+      @media @mobile {
+        width: 100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @mobile {
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
       }
     }
   }
-
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    @media @mobile {
+      display: flex;
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
       padding-right: 0;
     }
-
     .img-content {
       padding-right: 1%;
       padding-left: 0;
     }
   }
-
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+
+    @media @mobile {
+      width: 100%;
+    }
 
     img {
       border-radius: 10px;
     }
   }
-
   .content-pick {
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @mobile {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @mobile {
+        width: 90%;
+        padding-left: 3rem;
+      }
+      .btn {
+        background-color: @eastern-blue;
+        border: none;
+        color: white;
+        padding: 10px 50px;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 19px;
+        .buttonm(10px,center);
+        @media @mobile {
+          width: 100%;
+        }
+      }
     }
   }
 }// home
