--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,8 @@
 // Follow the order in the readme
+@import "variables";
+@import "mixins";
+@import "reset";
+@import "global";
+@import "header";
+@import "footer";
+@import "home-page";
