--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,34 @@
 // Mixins in here
+
+// .buttonStyle{
+//     padding: 5%;
+//     background-color: @button-bg;
+//     border: none;
+//     border-radius: 5px;
+//     color: white;
+//     width: 80%;
+//     text-align: center;
+//   }
+//   .displayFlex(@direction,@justify,@align){
+//     display: flex;
+//     flex-direction: @direction;
+//     justify-content: @justify;
+//     align-items: @align;
+//   }
+
+.title h1 {
+  position: absolute;
+  top: 15px;
+}
+.nav-items {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 2rem;
+  padding: 20px;
+}
+.nav-items .item {
+  color: black;
+  text-decoration: none;
+  margin-left: 20px;
+}
