--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+*/
 html,
 body,
 div,
@@ -134,8 +135,7 @@ html {
   font-size: 62.5%;
 }
 html,
-body,
-a {
+body {
   font-family: 'Roboto', sans-serif;
 }
 h1,
@@ -156,8 +156,7 @@ h4 {
   font-size: 2.5rem;
   padding-bottom: 10px;
 }
-p,
-a {
+p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
@@ -171,85 +170,66 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-.one {
-  display: flex;
-  flex-flow: row wrap;
-  padding-bottom: 1rem;
+.container {
+  width: 100%;
 }
-@media (max-width: 500px) {
-  .one {
-    width: 100%;
-  }
-}
-.one .top nav {
-  margin: auto;
+.navbar {
+  border-bottom: lightgrey dashed 2px ;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  padding-left: 30%;
+  padding-right: 29%;
+  padding-top: 2%;
+  padding-bottom: 1%;
 }
-@media (max-width: 500px) {
-  .one .top nav {
-    width: 100%;
-    padding-bottom: 0;
-    display: flex;
-    justify-content: space-between;
-    margin-left: 4rem;
-  }
-}
-.one .top nav a {
+a {
+  font-size: 1.5em;
+  display: flex;
+  flex-direction: space-evenly;
   text-decoration: none;
-  color: #212529;
-  font-size: 1.6rem;
+  color: black;
+}
+nav {
+  width: 80%;
   display: flex;
   justify-content: space-between;
-  padding: 1.5rem;
+  /*word-spacing: 70px;*/
+  position: relative;
+  margin: 0 auto;
+  padding: 2%;
+}
+#fun {
+  width: 60%;
+}
+#top {
+  border-bottom: lightgrey dashed 2px ;
+  padding-top: 3%;
+}
+.top {
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
 @media (max-width: 500px) {
-  .one .top nav a {
+  #fun {
+    width: 100%;
+    text-align: center;
+  }
+  .navbar {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding-left: 0%;
+    padding-right: 0%;
+  }
+  a {
     display: flex;
     justify-content: space-evenly;
-    padding-bottom: 0rem;
-    padding-right: 3.5rem;
-  }
-}
-.one h1 {
-  align-self: flex-end;
-  width: 28%;
-  margin-left: 43rem;
-}
-@media (max-width: 500px) {
-  .one h1 {
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    padding-top: 1rem;
-  }
-}
-hr {
-  border: none;
-  border-top: 2px dashed #C0C0C0;
-  height: 0px;
-  width: 60%;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-@media (max-width: 500px) {
-  hr {
-    width: 100%;
   }
 }
 .footer {
-  width: 50%;
-  margin: auto;
+  width: 100%;
   border-top: 2px dashed silver;
   background: #FFEBCD;
-}
-@media (max-width: 500px) {
-  .footer {
-    width: 100%;
-  }
 }
 .footer p {
   text-align: center;
@@ -257,39 +237,13 @@ hr {
   font-size: 1.6rem;
   padding: 20px;
 }
-.section {
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 48%;
-  padding-right: 1%;
-  margin-top: 30px;
-  padding-bottom: 10px;
-  border-bottom: 2px dashed #C0C0C0;
-}
-@media (max-width: 500px) {
-  .section {
-    width: 85%;
-  }
-}
-.bus {
-  margin: auto;
-  width: 48%;
-  padding-right: 1%;
-}
-@media (max-width: 500px) {
-  .bus {
-    width: 87%;
-  }
-}
-@media (max-width: 500px) {
-  .home {
-    width: 85%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
+.btn {
+  border-radius: 10px;
+  background: teal;
+  padding: 5%;
+  width: 75%;
+  text-align: center;
+  color: white;
 }
 .home .content-section {
   margin: 30px 0;
@@ -301,19 +255,9 @@ hr {
   width: 48%;
   padding-right: 1%;
 }
-@media (max-width: 500px) {
-  .home .content-section .text-content {
-    width: 100%;
-  }
-}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
-}
-@media (max-width: 500px) {
-  .home .content-section .img-content {
-    width: 100%;
-  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -321,12 +265,6 @@ hr {
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
-}
-@media (max-width: 500px) {
-  .home .inverse-content {
-    display: flex;
-    flex-direction: column-reverse;
-  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -340,11 +278,6 @@ hr {
   width: 75%;
   margin: 0 auto 30px;
 }
-@media (max-width: 500px) {
-  .home .content-destination {
-    width: 100%;
-  }
-}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -354,36 +287,54 @@ hr {
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 500px) {
-  .home .content-pick {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
 @media (max-width: 500px) {
-  .home .content-pick .destination {
-    width: 90%;
-    padding-left: 3rem;
+  #top,
+  #bus {
+    padding: 5%;
   }
-}
-.home .content-pick .destination .btn {
-  background-color: #17A2B8;
-  border: none;
-  color: white;
-  padding: 10px 50px;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 19px;
-  border-radius: 10px;
-  text-align: center;
-}
-@media (max-width: 500px) {
-  .home .content-pick .destination .btn {
+  .content-section {
+    padding: 5%;
+  }
+  .home .content-section .text-content,
+  .img-content {
     width: 100%;
+  }
+  .img-content {
+    width: 100% !important;
+  }
+  .home .inverse-content {
+    flex-wrap: wrap-reverse;
+    margin-top: 0%;
+  }
+  .content-section {
+    margin-top: -10%;
+  }
+  .home .content-pick .destination {
+    width: 100%;
+    margin-bottom: 30px;
+    margin: 0 auto;
+    margin-left: 5%;
+    padding: 5%;
+  }
+  .home .content-pick {
+    padding-top: 30px;
+    border-top: 2px dashed #C0C0C0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .btn {
+    margin: auto;
+    padding: 3% !important;
+    background-color: #0098ac;
+    width: 100%;
+    font-size: 1.5em;
+  }
+  .content-destination {
+    width: 90%!important;
+    margin: 0;
   }
 }
