--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,15 @@ img {
 .container {
   width: 100%;
 }
-
+.navbar {
+  border-bottom: lightgrey dashed 2px ;
+  width: 100%;
+  display: flex;
+  padding-left: 30%;
+  padding-right: 29%;
+  padding-top: 2%;
+  padding-bottom: 1%;
+}
 a {
   font-size: 1.5em;
   display: flex;
@@ -237,7 +245,51 @@ nav {
   text-align: center;
   color: white;
 }
-
+.home .content-section {
+  margin: 30px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.home .content-section .text-content {
+  width: 48%;
+  padding-right: 1%;
+}
+.home .content-section .img-content {
+  width: 48%;
+  padding-left: 1%;
+}
+.home .content-section .img-content img {
+  border-radius: 10px;
+}
+.home .inverse-content {
+  padding-bottom: 30px;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .inverse-content .text-content {
+  padding-left: 1%;
+  padding-right: 0;
+}
+.home .inverse-content .img-content {
+  padding-right: 1%;
+  padding-left: 0;
+}
+.home .content-destination {
+  width: 75%;
+  margin: 0 auto 30px;
+}
+.home .content-destination img {
+  border-radius: 10px;
+}
+.home .content-pick {
+  padding-top: 30px;
+  border-top: 2px dashed #C0C0C0;
+  display: flex;
+  justify-content: space-between;
+}
+.home .content-pick .destination {
+  width: 30%;
+  margin-bottom: 30px;
 }
 @media (max-width: 500px) {
   #top,
